--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} - {{ site.title }}</title>
+  <!--<title>{{ page.title }} - {{ site.title }}</title>-->
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
   <header>
-    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <--<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <nav>
       <a href="{{ site.baseurl }}/">Home</a>
       <a href="{{ site.baseurl }}/about">About</a>
       <a href="{{ site.baseurl }}/projects">Projects</a>
-    </nav>
+    </nav>-->
   </header>
 
   <main>
