--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,14 @@
 </head>
 <body>
   <header>
-    <--<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <!--
+    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <nav>
       <a href="{{ site.baseurl }}/">Home</a>
       <a href="{{ site.baseurl }}/about">About</a>
       <a href="{{ site.baseurl }}/projects">Projects</a>
-    </nav>-->
+    </nav>
+    -->
   </header>
 
   <main>
